# Simulator

./: .gitignore  CMakeLists.txt  README.md  settings.txt
.github/workflows/: continuous-integration.yml
data/ex_1_avg_NONE/: ambulances_strategy=closest_prioritizeTriage=false_responseRestricted=false_scheduleBreaks=false.csv  ambulances_strategy=closest_prioritizeTriage=false_responseRestricted=false_scheduleBreaks=true.csv  ambulances_strategy=closest_prioritizeTriage=false_responseRestricted=true_scheduleBreaks=false.csv  ambulances_strategy=closest_prioritizeTriage=false_responseRestricted=true_scheduleBreaks=true.csv  ambulances_strategy=closest_prioritizeTriage=true_responseRestricted=false_scheduleBreaks=false.csv  ambulances_strategy=closest_prioritizeTriage=true_responseRestricted=false_scheduleBreaks=true.csv  ambulances_strategy=closest_prioritizeTriage=true_responseRestricted=true_scheduleBreaks=false.csv  ambulances_strategy=closest_prioritizeTriage=true_responseRestricted=true_scheduleBreaks=true.csv  ambulances_strategy=random_prioritizeTriage=false_responseRestricted=false_scheduleBreaks=false.csv  ambulances_strategy=random_prioritizeTriage=false_responseRestricted=false_scheduleBreaks=true.csv  ambulances_strategy=random_prioritizeTriage=false_responseRestricted=true_scheduleBreaks=false.csv  ambulances_strategy=random_prioritizeTriage=false_responseRestricted=true_scheduleBreaks=true.csv  ambulances_strategy=random_prioritizeTriage=true_responseRestricted=false_scheduleBreaks=false.csv  ambulances_strategy=random_prioritizeTriage=true_responseRestricted=false_scheduleBreaks=true.csv  ambulances_strategy=random_prioritizeTriage=true_responseRestricted=true_scheduleBreaks=false.csv  ambulances_strategy=random_prioritizeTriage=true_responseRestricted=true_scheduleBreaks=true.csv  events_strategy=closest_prioritizeTriage=false_responseRestricted=false_scheduleBreaks=true.csv  events_strategy=closest_prioritizeTriage=false_responseRestricted=true_scheduleBreaks=false.csv  events_strategy=closest_prioritizeTriage=false_responseRestricted=true_scheduleBreaks=true.csv  events_strategy=closest_prioritizeTriage=true_responseRestricted=false_scheduleBreaks=false.csv  events_strategy=closest_prioritizeTriage=true_responseRestricted=false_scheduleBreaks=true.csv  events_strategy=closest_prioritizeTriage=true_responseRestricted=true_scheduleBreaks=false.csv  events_strategy=closest_prioritizeTriage=true_responseRestricted=true_scheduleBreaks=true.csv  events_strategy=random_prioritizeTriage=false_responseRestricted=false_scheduleBreaks=false.csv  events_strategy=random_prioritizeTriage=false_responseRestricted=false_scheduleBreaks=true.csv  (+6 more)
data/ex_2_avg_GA/: ambulances_ts=1.csv  ambulances_ts=10.csv  (+94 more)
include/: Ambulance.hpp  AmbulanceAllocator.hpp  AmbulanceAllocatorStrategy.hpp  CSVReader.hpp  CSVRow.hpp  Constants.hpp  DispatchEngine.hpp  DispatchEngineStrategy.hpp  Event.hpp  EventHandler.hpp  EventPerformanceMetrics.hpp  EventType.hpp  GAUtils.hpp  IncidentStatus.hpp  Incidents.hpp  Individual.hpp  ODMatrix.hpp  Population.hpp  ProgressBar.hpp  Progressbar.h  Settings.hpp  Simulator.hpp  Stations.hpp  Utils.hpp
source/: AmbulanceAllocator.cpp  CSVReader.cpp  CSVRow.cpp  DispatchEngine.cpp  EventHandler.cpp  Incidents.cpp  Individual.cpp  Main.cpp  ODMatrix.cpp  Population.cpp  ProgressBar.cpp  Simulator.cpp  Stations.cpp  Utils.cpp  main.cpp
(+3454 files in other folders)
